alt text added to nav buttons, page can zoom, and resources contrast fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2221,7 +2221,7 @@ input, select, textarea {
 						font-size: 100%;
 						text-decoration: underline;
 					}
-					#main > .panel.resources header p{
+					#main > .panel.resources header li{
 						flex-grow: 1;
 						flex-shrink: 1;
 						padding: 0 1em 1em;
